--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".OverviewActivity"></activity>
         <activity android:name=".IncomePagerActivity"></activity>
         <activity android:name=".IncomeListActivity"></activity>
     </application>
