--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,7 @@
             android:name=".IncomePagerActivity"
             android:parentActivityName=".IncomeListActivity"></activity>
         <activity android:name=".IncomeListActivity"></activity>
+        <activity android:name=".CategoryActivity"></activity>
     </application>
 
 </manifest>
