--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,10 @@
             android:parentActivityName=".IncomeListActivity"></activity>
         <activity android:name=".IncomeListActivity"></activity>
         <activity android:name=".CategoryActivity"></activity>
+        <activity android:name=".CategoryListActivity"></activity>
+        <activity
+            android:name=".CategoryPagerActivity"
+            android:parentActivityName=".CategoryListActivity" ></activity>
     </application>
 
 </manifest>
