--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,9 +22,15 @@
         <activity
             android:name=".IncomePagerActivity"
             android:parentActivityName=".IncomeListActivity"></activity>
-        <activity android:name=".IncomeListActivity"></activity>
+        <activity
+            android:name=".IncomeListActivity"
+            android:parentActivityName=".OverviewActivity"
+            ></activity>
         <activity android:name=".CategoryActivity"></activity>
-        <activity android:name=".CategoryListActivity"></activity>
+        <activity
+            android:name=".CategoryListActivity"
+            android:parentActivityName=".OverviewActivity">
+        </activity>
         <activity
             android:name=".CategoryPagerActivity"
             android:parentActivityName=".CategoryListActivity" ></activity>
