--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,15 @@
             android:name=".IncomeListActivity"
             android:parentActivityName=".OverviewActivity"
             ></activity>
+        <activity
+            android:name=".ExpensePagerActivity"
+            android:parentActivityName=".ExpenseListActivity">
+
+        </activity>
+        <activity
+            android:name=".ExpenseListActivity"
+            android:parentActivityName=".OverviewActivity">
+        </activity>
         <activity android:name=".CategoryActivity"></activity>
         <activity
             android:name=".CategoryListActivity"
