--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     }
     implementation 'com.android.support:recyclerview-v7:28.0.0'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.0.1'
+    implementation 'com.maltaisn:calcdialog:1.3.1'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
